# dfxml-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
demos/: demo_mac_timeline.rs  demo_sizes.rs
schema/: README.md
src/: error.rs  lib.rs  reader.rs  validation.rs  writer.rs
src/objects/: common.rs  dfxml.rs  fileobject.rs  mod.rs  volume.rs
