[package]
name = "dfxml-rs"
version = "0.1.0"
edition = "2021"
authors = ["Kam Woods"]
description = "Digital Forensics XML library for Rust"
license = "GNU Lesser General Public License 3.0"
repository = "https://github.com/kamwoods/dfxml-rs"
keywords = ["forensics", "dfxml", "xml", "digital-forensics"]
categories = ["parser-implementations", "encoding"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.37", features = ["serialize"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }

# CLI dependencies (optional)
clap = { version = "4", features = ["derive"], optional = true }
walkdir = { version = "2", optional = true }
md-5 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
rayon = { version = "1.10", optional = true }
digest = { version = "0.10", optional = true }

# Validation dependencies (optional)
libxml = { version = "0.3", optional = true }

[features]
default = []
serde = ["dep:serde", "chrono/serde"]
cli = ["dep:clap", "dep:walkdir", "dep:md-5", "dep:sha1", "dep:sha2", "dep:rayon", "dep:digest"]
validation = ["dep:libxml"]

[[bin]]
name = "walk_to_dfxml"
path = "src/bin/walk_to_dfxml.rs"
required-features = ["cli"]

[[bin]]
name = "cat_fileobjects"
path = "src/bin/cat_fileobjects.rs"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3.15"
